--- a/OmnivoreApi.csproj
+++ b/OmnivoreApi.csproj
@@ -54,7 +54,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Omnivore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tests\ResourceTester.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
