--- a/OmnivoreApi.csproj
+++ b/OmnivoreApi.csproj
@@ -53,10 +53,50 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Exceptions\OmnivoreApiError.cs" />
+    <Compile Include="Resources\Category.cs" />
+    <Compile Include="Exceptions\OmnivoreApiResult.cs" />
+    <Compile Include="Utils\Extensions.cs" />
+    <Compile Include="Resources\IResource.cs" />
+    <Compile Include="Resources\Location.cs" />
+    <Compile Include="Resources\Menu.cs" />
+    <Compile Include="Resources\MenuItem.cs" />
+    <Compile Include="Resources\Modifier.cs" />
+    <Compile Include="Resources\ModifierGroup.cs" />
+    <Compile Include="Exceptions\OmnivoreApiException.cs" />
+    <Compile Include="Resources\OrderType.cs" />
+    <Compile Include="Resources\Payment.cs" />
+    <Compile Include="Utils\Reference.cs" />
+    <Compile Include="Utils\ResourceArray.cs" />
+    <Compile Include="ResourceHandlers\LocationResourceLoader.cs" />
+    <Compile Include="ResourceHandlers\MenuItemResourceLoader.cs" />
+    <Compile Include="ResourceHandlers\MenuResourceLoader.cs" />
+    <Compile Include="ResourceHandlers\ModifierResourceLoader.cs" />
     <Compile Include="Omnivore.cs" />
+    <Compile Include="ResourceHandlers\OrderTypeResourceLoader.cs" />
+    <Compile Include="ResourceHandlers\PaymentResourceLoader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResourceHandlers\CategoryResourceLoader.cs" />
+    <Compile Include="ResourceHandlers\EmployeeResourceLoader.cs" />
+    <Compile Include="ResourceHandlers\ModifierGroupResourceLoader.cs" />
+    <Compile Include="ResourceHandlers\ResourceLoader.cs" />
+    <Compile Include="ResourceHandlers\RevenueCenterResourceLoader.cs" />
+    <Compile Include="ResourceHandlers\TableResourceLoader.cs" />
+    <Compile Include="ResourceHandlers\TenderTypeResourceLoader.cs" />
+    <Compile Include="Resources\Employee.cs" />
+    <Compile Include="Resources\RevenueCenter.cs" />
+    <Compile Include="Utils\SelfLink.cs" />
+    <Compile Include="Utils\SelfReference.cs" />
+    <Compile Include="Resources\Table.cs" />
+    <Compile Include="Resources\TenderType.cs" />
     <Compile Include="Tests\ResourceTester.cs" />
+    <Compile Include="ResourceHandlers\TicketItemModifierResourceLoader.cs" />
+    <Compile Include="ResourceHandlers\TicketItemResourceLoader.cs" />
+    <Compile Include="ResourceHandlers\TicketResourceLoader.cs" />
+    <Compile Include="Resources\Ticket.cs" />
+    <Compile Include="Resources\TicketItem.cs" />
+    <Compile Include="Resources\TicketItemModifier.cs" />
+    <Compile Include="Utils\ArrayReference.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
