--- a/OmnivoreApi.csproj
+++ b/OmnivoreApi.csproj
@@ -68,21 +68,21 @@
     <Compile Include="Resources\Payment.cs" />
     <Compile Include="Utils\Reference.cs" />
     <Compile Include="Utils\ResourceArray.cs" />
-    <Compile Include="ResourceHandlers\LocationResourceLoader.cs" />
-    <Compile Include="ResourceHandlers\MenuItemResourceLoader.cs" />
-    <Compile Include="ResourceHandlers\MenuResourceLoader.cs" />
-    <Compile Include="ResourceHandlers\ModifierResourceLoader.cs" />
+    <Compile Include="ResourceLoaders\LocationResourceLoader.cs" />
+    <Compile Include="ResourceLoaders\MenuItemResourceLoader.cs" />
+    <Compile Include="ResourceLoaders\MenuResourceLoader.cs" />
+    <Compile Include="ResourceLoaders\ModifierResourceLoader.cs" />
     <Compile Include="Omnivore.cs" />
-    <Compile Include="ResourceHandlers\OrderTypeResourceLoader.cs" />
-    <Compile Include="ResourceHandlers\PaymentResourceLoader.cs" />
+    <Compile Include="ResourceLoaders\OrderTypeResourceLoader.cs" />
+    <Compile Include="ResourceLoaders\PaymentResourceLoader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ResourceHandlers\CategoryResourceLoader.cs" />
-    <Compile Include="ResourceHandlers\EmployeeResourceLoader.cs" />
-    <Compile Include="ResourceHandlers\ModifierGroupResourceLoader.cs" />
-    <Compile Include="ResourceHandlers\ResourceLoader.cs" />
-    <Compile Include="ResourceHandlers\RevenueCenterResourceLoader.cs" />
-    <Compile Include="ResourceHandlers\TableResourceLoader.cs" />
-    <Compile Include="ResourceHandlers\TenderTypeResourceLoader.cs" />
+    <Compile Include="ResourceLoaders\CategoryResourceLoader.cs" />
+    <Compile Include="ResourceLoaders\EmployeeResourceLoader.cs" />
+    <Compile Include="ResourceLoaders\ModifierGroupResourceLoader.cs" />
+    <Compile Include="ResourceLoaders\ResourceLoader.cs" />
+    <Compile Include="ResourceLoaders\RevenueCenterResourceLoader.cs" />
+    <Compile Include="ResourceLoaders\TableResourceLoader.cs" />
+    <Compile Include="ResourceLoaders\TenderTypeResourceLoader.cs" />
     <Compile Include="Resources\Employee.cs" />
     <Compile Include="Resources\RevenueCenter.cs" />
     <Compile Include="Utils\SelfLink.cs" />
@@ -90,9 +90,9 @@
     <Compile Include="Resources\Table.cs" />
     <Compile Include="Resources\TenderType.cs" />
     <Compile Include="Tests\ResourceTester.cs" />
-    <Compile Include="ResourceHandlers\TicketItemModifierResourceLoader.cs" />
-    <Compile Include="ResourceHandlers\TicketItemResourceLoader.cs" />
-    <Compile Include="ResourceHandlers\TicketResourceLoader.cs" />
+    <Compile Include="ResourceLoaders\TicketItemModifierResourceLoader.cs" />
+    <Compile Include="ResourceLoaders\TicketItemResourceLoader.cs" />
+    <Compile Include="ResourceLoaders\TicketResourceLoader.cs" />
     <Compile Include="Resources\Ticket.cs" />
     <Compile Include="Resources\TicketItem.cs" />
     <Compile Include="Resources\TicketItemModifier.cs" />
